--- a/estilo.css
+++ b/estilo.css
@@ -4,9 +4,10 @@
     text-align: center;
     height: 100px;
     background-color: black;
+    font-style: normal;
 }
  
 body{
   background-color: black;
-  
+
 }
