--- a/estilo.css
+++ b/estilo.css
@@ -4,7 +4,7 @@
     text-align: center;
     height: 100px;
     background-color: black;
-    font-style: normal;
+    font-style: italic;
 }
  
 body{
