--- a/estilo.css
+++ b/estilo.css
@@ -14,6 +14,7 @@ body{
   .hidden {
     display: none;
     color: red;
+    text-align: center;
 }
 #toggle-text:checked + #text {
   display: block;
